# autodocs

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
autodocs/: __init__.py  __main__.py  hyperparameters.py  trace.py
autodocs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
autodocs/agent_tools/: class_hyperparams.py  describer.py  find_hyperparams_function.py  function_explanation.py  list_classes.py  list_functions.py  list_functions_class.py  parameter_retrieval.py  trace_comparisons.py  trace_retrieval.py
autodocs/agents/: model_comparison.py  parameter_understanding.py  system_message.py
autodocs/document/: doc.py
autodocs/pipeline/: model.py  run.py
autodocs/prompts/called_fn_summarisation/: prompt.py  run.py
autodocs/prompts/component_describer/: prompt.py  run.py
autodocs/templates/: model_page.html
autodocs/utils/: function_description.py  functional.py  model.py  slugify.py
document/: doc.py
pipeline/: run.py
prompts/called_fn_summarisation/: prompt.py  run.py
prompts/condenser/: prompt.py  run.py  utils.py
prompts/fn_summarisation/: examples.py  prompt.py  run.py  summary_similarity.py
prompts/hyperparameters/: prompt.py  run.py
prompts/similarity/: evaluate.py  examples.py  prompt.py
prompts/tagging/: evaluate.py  examples.py  prompt.py
prompts/usefulness/: evaluate.py  run.py
tests/: generate_html.py  test_filter_parameters.py  test_function_parameter_summarizer.py  test_function_parameter_summarizer_inbuilt_params.py  test_hyperparameter_summarizer.py
utils/: function_description.py
(+33 files in other folders)
