[tool.poetry]
name = "autodocs"
version = "0.0.1"
description = "Automatically generate documentation for models"
authors = ["Lissa Hyacinth <lissa@shareableai.com>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "autodocs"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^0.27.8"
tiktoken = "^0.4.0"
transformers = "^4.30.2"
langchain = "^0.0.221"
python-dotenv = "^1.0.0"
weaver = {path = "../../weaver-json"}


[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
pytest-env = "*"
pytest-cov = "*"
pytest-lazy-fixture = "*"
coverage = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"